welcome.lessons.welcome.array.island.Island.scala.error
island:21: error: not found: value n
	if (( num(i)==1  & num(i+1)==2 & n num(i+2)==1 & num(i+3)==1)){
                                         ^